# card_history

./: .gitignore  AGENTS.md  README.md  card_price_action.py  constants.py  custom_bin_strategy_analysis.ipynb  data_integrity.py  download_raw_data.py  download_raw_data_v1.py  eda.ipynb  embedding_trainer.py  explore_fill_missing_cards.py  explore_pwcc_data.py  feature_prep.ipynb  gemrate_preparation.ipynb  generate_embeddings.py  hybrid_search.py  iterative_model_improvement.txt  legacy_main.py  main.py  main2.py  main_mps.py  metrics.txt  model.ipynb  model_with_embedding.ipynb  prediction_query.py  pyproject.toml  query.ipynb  reproduce_bug.py  step_1.py  step_10.py  step_2.py  step_3.py  step_4.py  step_5.py  step_6.py  step_7.py  step_8.py  step_9.py  summary.txt  (+3 more)
api/: __init__.py  config.py  dependencies.py  main.py  models.py
model/: grid_search_worker.py  hyperparameter_search_worker.py  model_setup.py  model_test.py  run_pipeline.py
tests/: METRIC_COVERAGE.md  conftest.py  test_step_1_metrics.py  test_step_2_metrics.py  test_step_3_metrics.py  test_step_4_metrics.py  test_step_5_metrics.py  test_step_8_metrics.py  test_step_9_metrics.py
v1/: card_price_action.py  example_workflow.py  main.py  main_5-10_v2.py  main_6-10.py  model_architecture.py  preprocess_data.py  script1.js  script2.js  script3.js  test_inference.py  test_inference_5-10_v2.py  train.py
v2/: card_embeddings.py  card_name_search.py  cc_notes_12_31.txt  download_raw_data.py  inference.py  latest_prices.pkl  latest_prices_by_grade.pkl  spec_id_grades.pkl  track_missing_ids.py  train.py
(+8 files in other folders)
