[project]
name = "collector-crypt"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "cupy-cuda13x>=13.6.0",
    "dotenv>=0.9.9",
    "faiss-gpu-cu12>=1.13.0",
    "ipykernel>=7.1.0",
    "matplotlib>=3.10.7",
    "numpy>=2.3.5",
    "pandas>=2.3.3",
    "pyarrow>=22.0.0",
    "pymongo>=4.15.4",
    "requests>=2.32.5",
    "scikit-learn>=1.7.2",
    "seaborn>=0.13.2",
    "sentence-transformers>=5.2.0",
    "tqdm>=4.67.1",
    "tqdm-multiprocess>=0.0.11",
    "xgboost>=3.1.2",
]
