[project]
name = "card_history"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
    "accelerate>=1.12.0",
    "fastparquet>=2025.12.0",
    "ipython>=8.37.0",
    "matplotlib>=3.10.6",
    "pandas>=2.3.2",
    "pokemontcgsdk>=3.4.0",
    "pyarrow>=22.0.0",
    "pymongo>=4.14.1",
    "python-dotenv>=1.1.1",
    "scikit-learn>=1.7.1",
    "sentence-transformers>=5.2.0",
    "torch>=2.8.0",
    "tqdm>=4.67.1",
]
